--- a/website/SC08A/templates/SC08A/motoindex.html
+++ b/website/SC08A/templates/SC08A/motoindex.html
@@ -1,5 +1,8 @@
 <html>
-	<head><title>SC08A driver</title></head>
+	<head>
+		<title>SC08A driver</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	</head>
 	<body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}' >
 	<h1>"Servo list:"</h1>
 	<script src="https://unpkg.com/htmx.org@1.8.0"></script>
